# library-backend/models/reservation.go
@@ -1,0 +1,7 @@
+package models
+
+// ReservationRequest 用户预约请求结构体
+type ReservationRequest struct {
+	UserID int `json:"userId" example:"1"`
+	BookID int `json:"bookId" example:"101"`
+}
